<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dd"
    tools:context=".Home">

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toStartOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <com.synnapps.carouselview.CarouselView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="237dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner2"
        android:layout_alignParentStart="true">

        <CheckBox
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:id="@+id/check_heal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_heal"
            />

        <CheckBox
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:id="@+id/check_nature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_nature" />
        <CheckBox
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:id="@+id/check_tour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_tour"
            />

        <CheckBox
            android:id="@+id/check_cafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/check_cafe" />
        <CheckBox
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:id="@+id/check_rise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_rise"
            />

        <CheckBox
            android:id="@+id/check_sea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/check_sea" />

    </LinearLayout>


</RelativeLayout>